Tue Oct  9 17:08:00 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (thread_status_name): separated from
	  rb_thread_inspect(). return string expression for thread status.

	* eval.c (rb_thread_status, rb_thread_inspect): use
	  thread_status_name().

	* eval.c (rb_thread_priority_set): return the priority not but
	  self.

Sat Oct  6 23:07:08 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): NODE_MATCH3 was confusing left and right. sigh.

Fri Oct  5 15:27:30 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c: backport from 1.7 marshal.c

Thu Oct  4 14:11:03 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/socket/socket.c (ruby_connect): EALREADY is the equivalent
	  for EINPROGRESS in ws2_32.lib.

Wed Oct  3 13:32:06 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_aset): should maintain original negative
	  offset.

	* string.c (rb_str_aset_m): ditto.

	* re.c (rb_reg_nth_match): should check negative nth.

	* re.c (rb_reg_nth_defined): ditto.

Tue Oct  2 19:12:47 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/ftools.rb (catname): allow trailing '/' for the destination.

Tue Oct  2 18:31:20 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): should override existing class.

Mon Oct  1 19:18:54 2001  Tanaka Akira  <akr@m17n.org>

	* ext/socket/socket.c (unix_addr): getsockname(2) may result len = 0. 

	* ext/socket/socket.c (unix_peeraddr): getpeername(2) may result
	  len = 0.

Sat Sep 29 02:30:06 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (POP_BLOCK): rb_gc_force_recycle() was called too much.
	  Should not be called if SCOPE_DONT_RECYCLE is set.

Thu Sep 27 09:04:44 2001  Guy Decoux  <ts@moulon.inra.fr>

	* parse.y: allow 'primary[] += arg'

Tue Sep 25 10:42:46 2001  Usaku Nakamura  <usa@ruby-lang.org>

	* win32/win32.c (isInternalCmd): check return value of NtMakeCmdVector
	  (Tietew <tietew@tietew.net>'s patch).
