@@ -194,7 +194,7 @@ static void top_local_setup();
 
 %token <id>   tIDENTIFIER tFID tGVAR tIVAR tCONSTANT tCVAR
 %token <val>  tINTEGER tFLOAT tSTRING tXSTRING tREGEXP
-%token <node> tDSTRING tDXSTRING tDREGEXP tNTH_REF tBACK_REF
+%token <node> tDSTRING tDXSTRING tDREGEXP tNTH_REF tBACK_REF tQWORDS
 
 %type <node> singleton string
 %type <val>  literal numeric
@@ -1076,6 +1076,7 @@ primary		: literal
 		    {
 			$$ = NEW_XSTR($1);
 		    }
+		| tQWORDS
 		| tDXSTRING
 		| tDREGEXP
 		| var_ref
@@ -2654,7 +2655,7 @@ parse_quotedwords(term, paren)
     if (!qwords) qwords = NEW_ZARRAY();
     yylval.node = qwords;
     lex_state = EXPR_END;
-    return tDSTRING;
+    return tQWORDS;
 }
 
 static int
